objects/FAQ__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <page>FAQ_Template</page>
            <template>Page</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <page>FAQ_Template</page>
            <template>Page</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <page>FAQ_Template</page>
            <template>Page</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <page>FAQ_Template</page>
            <template>Page</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <description>A simple layout often consisting of one question and its answer. If &gt;1 set, supply brief, related questions/answers in the Answer section.</description>
    <fields>
        <fullName>Answer_1__c</fullName>
        <label>Answer 1</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Answer_2__c</fullName>
        <label>Answer 2</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Answer_3__c</fullName>
        <label>Answer 3</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Answer__c</fullName>
        <description>A brief answer to the question, optionally linking to additional articles</description>
        <inlineHelpText>Supply a brief, clear answer to the question asked.</inlineHelpText>
        <label>Answer</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Attachments__c</fullName>
        <description>Used to attach files relevant to article content</description>
        <inlineHelpText>Attach handouts, job aids, or other files referred to in the article, if applicable</inlineHelpText>
        <label>Attachments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Case_topic__c</fullName>
        <label>Case topic</label>
        <picklist>
            <controllingField>Internal_or_Test_Center_case__c</controllingField>
            <picklistValues>
                <fullName>Accommodations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Admissions/Check-In</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Admissions/Check-In - Client admissions waiver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Candidate Inquiries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exam Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hardware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hardware - Admissions Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hardware - DVR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hardware - General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hardware - PPC Network</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hardware - Workstation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Help/Question</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Help/Question - Call transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Help/Question - Help</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Help/Question - Project Time (off phone)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 2 / Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 2 / Manager - Site Task/Notification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Password Reset</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality Notes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality Notes - Pre-Activation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality Notes - Privacy Status</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registration/Appointment Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Software - Non VTS software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Software - VTS software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test Center Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test Center Quality - PVTC Report Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test Center Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VSS - Exam Delivery</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FAQ_Department__c</fullName>
        <description>FAQ SME</description>
        <label>FAQ Department</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Final_Category_Name__c</fullName>
        <label>Case category</label>
        <picklist>
            <controllingField>Case_topic__c</controllingField>
            <picklistValues>
                <fullName>Accommodation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acknowledge Notification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adding/Removing Clients</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add new user</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Admin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administrator error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Admissions manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amplifier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Answer a Question</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved Testing Accommodation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATS Notification/Request (1XXX)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Backup Admissions Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biometric waivers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call center (list client in description)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Camera</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Candidate complaint about exam content</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Candidate ends exam early - no result</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Candidate Error/Misconduct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Candidate Error or Misconduct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change of Address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change to private</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change to public</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Channel quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chateau</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chat session</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Request to Override</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complaint of unprofessional treatment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete a task</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consent and waiver form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defect</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Internal_comments__c</fullName>
        <description>Extra information visible only to internal support information</description>
        <inlineHelpText>Add extra information to be available only to Pearson employees supporting users who raise this question, if applicable</inlineHelpText>
        <label>Internal comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Internal_or_Test_Center_case__c</fullName>
        <label>Internal or Test Center case</label>
        <picklist>
            <picklistValues>
                <fullName>Internal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test Center</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Knowledge_Rendering__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Knowledge Rendering</label>
        <referenceTo>Knowledge_Rendering__c</referenceTo>
        <relationshipLabel>FAQs</relationshipLabel>
        <relationshipName>FAQs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Question_1__c</fullName>
        <label>Question 1</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Question_2__c</fullName>
        <label>Question 2</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Question_3__c</fullName>
        <label>Question 3</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <description>A single question that is often asked</description>
        <inlineHelpText>Supply a brief question sans answer</inlineHelpText>
        <label>Question</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>FAQ</label>
    <pluralLabel>FAQs</pluralLabel>
</CustomObject>